Migrating to Persisted backend